Fixed chessboard being stuck to top of the screen on laptops & copyright link
Achieved this by adding a margin-top to interface, also changed copyright link to point to my portfolio website instead of my github page

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.interface{
+  margin-top: 3rem;
+}
+
 .main-container{
   display: grid;
   column-gap: 6.4rem;
